# thurbox-plugin-orchestrator

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml  manifest
.beads/: config.yaml  metadata.json
.github/workflows/: ci.yml
crates/gc-session-thurbox/: Cargo.toml
crates/gc-session-thurbox/src/: main.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: bd.rs  dispatch.rs  gastown.rs  jsonrpc.rs  lib.rs  orch.rs  plan.rs  plugin.rs  poll.rs  review.rs  rig.rs  sentinel.rs  thurbox.rs
crates/orchestrator-core/tests/: manifest.rs
crates/thurbox-orchestrator/: Cargo.toml
crates/thurbox-orchestrator/src/: main.rs
crates/thurbox-plugin-gastown/: Cargo.toml
crates/thurbox-plugin-gastown/src/: main.rs
crates/thurbox-plugin-orchestrator/: Cargo.toml
crates/thurbox-plugin-orchestrator/src/: main.rs
crates/thurbox-worker-wrap/: Cargo.toml
crates/thurbox-worker-wrap/src/: main.rs
examples/admin/: city.toml
examples/skills/orchestrate/: SKILL.md
examples/skills/orchestrate-worker/: SKILL.md
plugin/: .gitkeep-bin  README.md  thurbox-plugin.toml
plugin/roles/: orchestrator.toml  worker.toml
plugin/skills/orchestrate/: SKILL.md
plugin/skills/orchestrate-worker/: SKILL.md
roles/: orchestrator.toml  worker.toml
scripts/: bootstrap-admin.sh  install.sh  thurbox-wait-result.sh
skills/orchestrate/: SKILL.md
