[workspace]
resolver = "2"
members = [
    "crates/thurbox-orchestrator",
    "crates/orchestrator-core",
]

[workspace.package]
version = "0.0.0-dev"
edition = "2021"
license = "MIT"
authors = ["LeTuR <magicletur@protonmail.com>"]
repository = "https://github.com/Thurbeen/thurbox-orchestrator"
rust-version = "1.75"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
orchestrator-core = { path = "crates/orchestrator-core" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
