[workspace]
resolver = "2"
members = [
    "crates/orchestrator-core",
    "crates/thurbox-plugin-gastown",
    "crates/gc-session-thurbox",
    "crates/thurbox-worker-wrap",
]

[workspace.package]
version = "0.0.0-dev"
edition = "2021"
license = "MIT"
authors = ["LeTuR <magicletur@protonmail.com>"]
repository = "https://github.com/Thurbeen/thurbox-plugin-gastown"
rust-version = "1.75"

[workspace.dependencies]
orchestrator-core = { path = "crates/orchestrator-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "fs", "sync", "time", "signal"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
