[package]
name = "gc-session-thurbox"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Gastown exec session provider that spawns workers inside thurbox sessions"

[[bin]]
name = "gc-session-thurbox"
path = "src/main.rs"

[dependencies]
orchestrator-core = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
