[package]
name = "thurbox-plugin-gastown"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Thurbox plugin daemon that exposes gastown.* MCP tools"

[[bin]]
name = "thurbox-plugin-gastown"
path = "src/main.rs"

[dependencies]
orchestrator-core = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
