[package]
name = "thurbox-plugin-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Thurbox plugin daemon: beads-driven multi-agent orchestrator"

[[bin]]
name = "thurbox-plugin-orchestrator"
path = "src/main.rs"

[dependencies]
orchestrator-core = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
