[package]
name = "thurbox-worker-wrap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Polls a thurbox session for a sentinel and closes the bd item"

[[bin]]
name = "thurbox-worker-wrap"
path = "src/main.rs"

[dependencies]
orchestrator-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
